--- a/PAGES/3b_univariables/index.html
+++ b/PAGES/3b_univariables/index.html
@@ -2035,7 +2035,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The previous section introduced the concept of variables, distinguishing between those containing a single element and those acting as collections. This section exclusively focuses on single-element variables, and in particular on those containing a number. </p>
+<p>The previous section introduced the concept of variables, distinguishing between those containing a single element and collections. This section exclusively focuses on single-element variables, and in particular on numerical variables.</p>
 <p>      </div>
     </div>
   </div>
@@ -2045,25 +2045,24 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
-<p>Computers use various representations for numbers, where integers and real numbers are treated as different objects. Furthermore, several representations arise according to the level of precision aimed. These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
-<p>The default types for numbers in Julia are:</p>
+<p>Computers use various representations for numbers, with integers and real numbers treated as different objects. Furthermore, several representations arise according to the level of precision aimed, which basically establishes the maximum range or decimal numbers that the data types support. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, a positive integer with precision of 64 bits can&#39;t be larger than 9,223,372,036,854,775,807. Likewise, a floating-point number with 64 bits of precision can have at most 16 digits &#40;this statement is actually a simplification&#41;.  </span></span>  These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
+<p>The numeric default types in Julia have a precision of 64 bits, and are defined as:</p>
 <ul>
 <li><p><code>Int64</code> for integers.</p>
 </li>
 <li><p><code>Float64</code> for decimal numbers. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The term &quot;Float&quot; stands for <a href="https://en.wikipedia.org/wiki/Double-precision_floating-point_format">&quot;Floating-Point&quot;</a>, and is how computers represent decimal numbers.  </span></span></p>
 </li>
 </ul>
-<p>The number 64 in <code>Int64</code> and <code>Float64</code> indicates the level of precision, expressed through the number of bits of memory allocated for each number. It basically establishes the maximum range or number of decimals that the data types support. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, a positive number with type <code>Int64</code> can&#39;t be larger than 9,223,372,036,854,775,807, while a number with type <code>Float64</code> has at most 16 digits &#40;this statement is a simplification, good enough for our purposes&#41;.  </span></span> </p>
-<p>It&#39;s important to emphasize that <code>Int64</code> and <code>Float64</code> are different data types. This implies that <code>1</code> has type <code>Int64</code>, but the same number in <code>Float64</code> is <code>1.0</code>. Therefore, to represent an integer as a <code>Float64</code>, you need to add either a zero decimal or a dot.</p>
+<p>It&#39;s worth emphasizing that <code>Int64</code> and <code>Float64</code> are different data types. Thus, while <code>1</code> is a value with type <code>Int64</code>, the same number has to be expressed as <code>1.0</code> to get a <code>Float64</code> type.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 1       # &#96;Int64&#96;
 
 y &#61; 1.0     # &#96;Float64&#96;
-z &#61; 1.      # alternative form to write a &#96;Float64&#96;</code></pre>
+z &#61; 1.      # alternative notation</code></pre>
 <p></div> </div>  </details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     You can separate long numbers by underscores <code>_</code>. This feature enhances code readability substantially, as demonstrated in the following example.</p>
+      <b>Remark</b> </span>  </div>  <div class=content>     To enhance code readability, you can separate long numbers by adding underscores <code>_</code>. </p>
 <p> <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 1000000               
 y &#61; 1_000_000             #equivalent to &#96;x&#96; and more readable
@@ -2088,8 +2087,8 @@ z &#61; 0/0</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Boolean Variables</h2></p>
-<p>A particular numerical type is <code>Bool</code>, which represents   <span style="color: rgb(62, 121, 180);"><strong> Boolean variables</strong></span>. These variables can only take the values <code>true</code> and <code>false</code>, and internally are a subtype of integers that only accepts the values <code>1</code> and <code>0</code>. This is why, once we define a <code>Bool</code> variable, the values <code>1</code> and <code>0</code> can be used interchangeably with <code>true</code> and <code>false</code>.</p>
-<p>Boolean values commonly arise when we assess conditions &#40;e.g., whether a number is greater than another&#41;, as we show below.</p>
+<p>A particular numeric type is <code>Bool</code>, which allows us to represent   <span style="color: rgb(62, 121, 180);"><strong> Boolean variables</strong></span>. Boolean variables can only take on the values <code>true</code> and <code>false</code>, and are implemented internally as integers that only accept <code>1</code> and <code>0</code>. This is why, once we define a <code>Bool</code> variable, <code>1</code> and <code>0</code> can be used interchangeably with <code>true</code> and <code>false</code>.</p>
+<p>Boolean expressions arise commonly when we assess conditions &#40;e.g., whether a number is greater than another&#41;, as shown below.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 2
 y &#61; 1
@@ -2106,7 +2105,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, it d
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Arithmetic Operators</h2></p>
-<p>Numbers can be manipulated using <strong> arithmetic operators</strong>. The symbols for these operators are akin to those used in other software. Next, we state the main ones. </p>
+<p>Numbers can be manipulated using <strong> arithmetic operators</strong>. The symbols to express these operators are akin to those in other programming languages. Next, we state the main ones. </p>
 <p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
