--- a/PAGES/3b2_strings/index.html
+++ b/PAGES/3b2_strings/index.html
@@ -2088,12 +2088,12 @@ x &#61; &quot;&quot;&quot;Hello, beautiful world&quot;&quot;&quot;</code></pre>
       <div class="col-lg- mx-auto">
         <h2>String Interpolation</h2> </p>
 <p>  <span style="color: rgb(62, 121, 180);"><strong> String interpolation</strong></span> lets you embed Julia code into a string. This code is eventually evaluated and replaced into the string with its resulting output. The technique represents a convenient way to insert content that depends on variables, computations, or expressions.</p>
-<p>The syntax to interpolate a variable requires preceding it with <code>&#36;</code>. Likewise, expressions spanning several words need to be delimited with curly braces <code>&#36;&#40;&#41;</code>. The following examples interpolate text with a variable and with a computation, respectively.</p>
+<p>The syntax to interpolate a variable requires preceding it with <code>&#36;</code>. Likewise, expressions spanning several symbols need to be delimited with curly braces <code>&#36;&#40;&#41;</code>. Both cases are exemplified below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
     <button class="tablink first_tab active" data-id=""> Interpolating Variable </button>
-    <button class="tablink" data-id=""> Interpolating Computation </button>
+    <button class="tablink" data-id=""> Interpolating Expression </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">number_students &#61; 10
