--- a/PAGES/3b2_strings/index.html
+++ b/PAGES/3b2_strings/index.html
@@ -2087,8 +2087,8 @@ x &#61; &quot;&quot;&quot;Hello, beautiful world&quot;&quot;&quot;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>String Interpolation</h2> </p>
-<p>  <span style="color: rgb(62, 121, 180);"><strong> String interpolation</strong></span> lets you embed Julia code into a string. This code is eventually evaluated and replaced into the string with its resulting output. The technique represents a convenient way to insert content that depends on variables, computations, or expressions.</p>
-<p>The syntax to interpolate a variable requires preceding it with <code>&#36;</code>. Likewise, expressions spanning several symbols need to be delimited with curly braces <code>&#36;&#40;&#41;</code>. Both cases are exemplified below.</p>
+<p>  <span style="color: rgb(62, 121, 180);"><strong> String interpolation</strong></span> allows you to insert the result of any Julia code into a string. The technique represents a convenient way to insert content that depends on variables, computations, or expressions.</p>
+<p>To interpolate a variable into a string, you need to precede it with <code>&#36;</code>. Likewise, expressions spanning several symbols need to be delimited with curly braces <code>&#36;&#40;&#41;</code>. Both cases are exemplified below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2124,7 +2124,7 @@ x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3c_arrays" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 11, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
