--- a/PAGES/4d_vectorizing/index.html
+++ b/PAGES/4d_vectorizing/index.html
@@ -2035,8 +2035,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Programming languages have multiple approaches for transforming collections of objects. These methods are useful when, for instance, we seek to compute the squared elements of <code>x&#61;&#91;2,3,4&#93;</code>, resulting in a new variable <code>y&#61;&#91;4,9,16&#93;</code>.</p>
-<p>In this section, we explore one way to execute these transformations:   <span style="color: rgb(62, 121, 180);"><strong> vectorization</strong></span>, also known as   <span style="color: rgb(62, 121, 180);"><strong> broadcasting</strong></span>. Formally, broadcasting allows the user to apply <strong> functions</strong> and <strong> operators</strong> an element-wise to iterable collections, such as vectors, tuples, and ranges. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Formally, iterable collections refer to collections whose elements can be accessed sequentially.  </span></span> Unlike other methods, broadcasting makes it possible to perform these operations through a simple syntax.</p>
+<p>Programming languages have multiple approaches for transforming collections of objects. These methods are useful when, for instance, we aim to compute all the squared elements of <code>x&#61;&#91;2,3,4&#93;</code>.</p>
+<p>In this section, we explore one way to execute these transformations:   <span style="color: rgb(62, 121, 180);"><strong> broadcasting</strong></span>, also known as   <span style="color: rgb(62, 121, 180);"><strong> vectorization</strong></span>. This allows the user to element-wise apply <strong> functions</strong> and <strong> operators</strong> to iterable collections such as vectors, tuples, and ranges. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Formally, iterable collections refer to collections whose elements can be accessed sequentially.  </span></span> Unlike other methods, broadcasting makes it possible to perform these operations through a simple syntax.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content>     The terms <strong> vectorization</strong> and <strong> broadcasting</strong> will be used interchangeably on this website. Strictly speaking, vectorization arises with arrays of the same size, while broadcasting is an extension additionally allowing for scalars.  </div>  </div>
@@ -2629,7 +2629,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\5a_logical" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified January 11, 2024 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified January 12, 2024 </span>  
   </div>
 <!-- </p>  -->
 </footer>
